01-therottenorange/rottenapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moldyoranges
  namespace: potentially-moldy-stuff
  labels:
    app: moldyoranges
spec:
  replicas: 3
  selector:
    matchLabels:
      app: moldyoranges
  template:
    metadata:
      labels:
        app: moldyoranges
    spec:
      containers:
      - name: moldyoranges
        image: quay.io/mdargatz/thegitopsfridge-orange:v1
        ports:
        - containerPort: 8080
