01-therottenorange/rottenapp-deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moldystrawberries
  labels:
    app: moldystrawberries
    app.kubernetes.io/part-of: myfridge
spec:
  replicas: 2
  selector:
    matchLabels:
      app: moldystrawberries
  template:
    metadata:
      labels:
        app: moldystrawberries
    spec:
      containers:
      - name: moldystrawberries
        image: quay.io/mdargatz/thegitopsfridge-orange:v1
        ports:
        - containerPort: 8080
