01-therottenorange/rottenapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: moldyoranges
spec:
  selector:
    app: moldyoranges
  ports:
    - protocol: TCP
      port: 8181
      targetPort: 8080
  type: ClusterIP
