01-therottenorange/rottenapp-ingress.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: moldyoranges
  labels:
    app: moldyoranges
spec:
  host: rottenoranges.apps.cluster-9hgj9.9hgj9.sandbox1381.opentlc.com
  to:
    kind: Service
    name: moldyoranges
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
